[gd_scene load_steps=13 format=3 uid="uid://fkoxybe25miq"]

[ext_resource type="Texture2D" uid="uid://f544bvsaybyq" path="res://assets/enemies/Purple Slime Spritesheet.png" id="1_30a25"]
[ext_resource type="Script" uid="uid://dlxevrigoe5ri" path="res://scenes/scripts/slime_enemy.gd" id="1_fq0mw"]
[ext_resource type="PackedScene" uid="uid://dhq0pa6na6p7k" path="res://scenes/killzone.tscn" id="2_fq0mw"]
[ext_resource type="AudioStream" uid="uid://cfp13aw81wlfa" path="res://assets/sounds/sfx_bump.ogg" id="4_2blxa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2blxa"]
atlas = ExtResource("1_30a25")
region = Rect2(48, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf6xp"]
atlas = ExtResource("1_30a25")
region = Rect2(64, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_c78co"]
atlas = ExtResource("1_30a25")
region = Rect2(80, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_asgod"]
atlas = ExtResource("1_30a25")
region = Rect2(96, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_078ac"]
atlas = ExtResource("1_30a25")
region = Rect2(112, 0, 16, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ydsu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2blxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf6xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c78co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asgod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_078ac")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2blxa"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq0mw"]
size = Vector2(12, 4)

[node name="slime_enemy" type="Node2D"]
script = ExtResource("1_fq0mw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3ydsu")
autoplay = "default"
frame_progress = 0.73540974

[node name="killzone" parent="." instance=ExtResource("2_fq0mw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2blxa")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(-11, 0)

[node name="Stomp" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="hitbox" type="CollisionShape2D" parent="Stomp"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_fq0mw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2blxa")
autoplay = true
bus = &"SFX"
area_mask = 3

[connection signal="body_entered" from="Stomp" to="." method="_on_stomp_body_entered"]
